turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:19: error: Int does not take parameters
    house()
         ^